# aidoku-sources-for-russians

./: .gitignore  LICENSE  README.md  index.json  index.min.json
.github/workflows/: build.yaml
sources/: ru.allhentai-v6.aix  ru.mangabuff-v1.aix  ru.ranobehub-v2.aix  ru.ranoberf-v2.aix  ru.ranobes-v5.aix  ru.readmanga-v5.aix  ru.senkognito-v6.aix  ru.senkuro-v6.aix
sources/ru.acomics/: Cargo.toml  README.md
sources/ru.acomics/res/: source.json
sources/ru.acomics/src/: lib.rs
sources/ru.allhentai/: Cargo.toml
sources/ru.allhentai/res/: settings.json  source.json
sources/ru.allhentai/src/: lib.rs
sources/ru.mangabuff/: Cargo.toml  README.md
sources/ru.mangabuff/res/: source.json
sources/ru.mangabuff/src/: lib.rs
sources/ru.mintmanga/: Cargo.toml
sources/ru.mintmanga/res/: settings.json  source.json
sources/ru.mintmanga/src/: lib.rs
sources/ru.ranobehub/: Cargo.toml  README.md
sources/ru.ranobehub/res/: settings.json  source.json
sources/ru.ranobehub/src/: lib.rs  models.rs
sources/ru.ranoberf/: Cargo.toml  README.md
sources/ru.ranobes/: Cargo.toml  README.md
sources/ru.readmanga/: Cargo.toml  README.md
sources/ru.remanga/: Cargo.toml  README.md
sources/ru.selfmanga/: Cargo.toml
sources/ru.senkognito/: Cargo.toml  README.md
sources/ru.senkognito/res/: filters.json  settings.json  source.json
sources/ru.senkognito/src/: lib.rs
sources/ru.senkuro/: Cargo.toml  README.md
templates/grouple/: Cargo.toml
templates/senkuro/: Cargo.toml
templates/senkuro/src/: filters.rs  graphql.rs  lib.rs  models.rs  settings.rs
(+27 files in other folders)
