[package]
name = "senkuro"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", version = "0.3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
